data/derived/comb/progs/unify/prog6828.ml.out
Characters 28-40:
  let fixpoint (f,b) = wwhile (f, true, b);;
                              ^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type ('d -> 'd * bool) * 'd
